--- a/themes/san-diego/source/styles/_wares.scss
+++ b/themes/san-diego/source/styles/_wares.scss
@@ -15,10 +15,7 @@
 
         @media screen and (max-width: variables.$mobile-breakpoint) {
                 padding: 0;
-                min-height: 100%;
-                flex: 1;
-                display: flex;
-                flex-direction: column;
+                min-height: 0;
         }
 }
 
